Обновлен адаптив сайта:     - Несколько дополнительных изменений;

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,10 +26,6 @@ html {
   font-family: "Montserrat";
 }
 
-body {
-  height: 2000px;
-}
-
 /* --------------------------------- HEADER ------------------------------------ */
 
 .header {
@@ -192,6 +188,11 @@ body {
 .section-container {
 }
 
+.main-section-cards__container {
+  display: flex;
+  justify-content: center;
+}
+
 main {
   margin-top: 60px;
 }
@@ -292,8 +293,7 @@ main {
 }
 .main__cards-caption {
   display: flex;
-  width: 1242px;
-  max-width: 1242px;
+  max-width: 1270px;
   max-height: 40px;
   justify-content: space-between;
 }
@@ -314,16 +314,20 @@ main {
   border-radius: 9px;
   background-image: url("/images/header-button-border-gradient.svg");
 }
+
 .main__cards-items {
   display: flex;
+  justify-content: center;
   position: relative;
   column-gap: 30px;
   /* margin-left: -62px; */
   align-items: center;
 }
+
 .main__cards-items::before {
   position: absolute;
   content: "";
+  left: 0;
   transform: translateX(calc(-100% - 30px));
   width: 36px;
   height: 36px;
@@ -336,6 +340,10 @@ main {
 }
 .main__cards-items::after {
   content: "";
+  position: absolute;
+  right: 0;
+  transform: translateX(calc(100% + 30px));
+
   width: 36px;
   height: 36px;
   background-position-x: 50%;
@@ -346,7 +354,7 @@ main {
   background-color: #f5f6f8;
 }
 
-.one {
+.item {
   background-color: white;
   max-width: 450px;
   max-height: 455px;
@@ -499,10 +507,19 @@ main {
 /* ---------------------- SUPPORTING CITIES ---------------------------------*/
 
 .main__support-cities {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 100px;
 }
 
+.main__support-cities__wrapper {
+  max-width: 1242px;
+  width: 100%;
+}
+
 .table {
+  width: 100%;
   max-width: 1242px;
   max-height: 280px;
   border-collapse: collapse;
@@ -558,25 +575,25 @@ td span {
 .table__col--first {
   column-gap: 8px;
   align-items: center;
-  width: 360px;
+  /* width: 360px; */
   height: 40px;
 }
 
 .table__col--second {
-  align-items: center;
   padding-left: 16px;
-  width: 204px;
+  /* width: 204px; */
   height: 40px;
 }
 .table__col--third {
+  flex-direction: column;
   align-items: center;
   padding-left: 16px;
-  width: 204px;
+  /* width: 204px; */
   height: 40px;
 }
 .table__col--fourth {
   align-items: center;
-  width: 204px;
+  /* width: 204px; */
   height: 40px;
 }
 
@@ -590,9 +607,8 @@ td span {
 .table__col--fifth {
   align-items: center;
   padding-left: 16px;
-  width: 220px;
+  /* width: 220px; */
   height: 40px;
-
   font-weight: 700;
   font-size: 16px;
 }
@@ -606,8 +622,13 @@ td span {
 
 /* ------------------------------ SCHOOL PROJECTS ----------------- */
 
-.main__cards-caption_margined {
+.main-section-school-projects {
   margin-top: 100px;
+}
+
+.main__school-projects-container {
+  display: flex;
+  justify-content: center;
 }
 
 .caption__button_sized {
@@ -619,13 +640,18 @@ td span {
 
 .project-card-wrapper {
   display: flex;
+  position: relative;
   column-gap: 30px;
   align-items: center;
-  margin-left: -62px;
+  margin-top: 24px;
+  /* margin-left: -62px; */
 }
 
 .project-card-wrapper::before {
   content: "";
+  position: absolute;
+  left: 0;
+  transform: translateX(calc(-100% - 30px));
   width: 36px;
   height: 36px;
   background-position-x: 50%;
@@ -638,6 +664,9 @@ td span {
 
 .project-card-wrapper::after {
   content: "";
+  position: absolute;
+  right: 0;
+  transform: translateX(calc(100% + 30px));
   width: 36px;
   height: 36px;
   background-position-x: 50%;
@@ -649,7 +678,7 @@ td span {
 }
 
 .project-card {
-  margin-top: 24px;
+  /* margin-top: 24px; */
   width: 394px;
   height: 352px;
   max-width: 394px;
@@ -772,7 +801,7 @@ td span {
 .subscribe {
   margin-top: 130px;
   max-width: 1362px;
-  max-height: 572px;
+  /* max-height: 572px; */
   border-radius: 20px;
   padding: 60px;
   background: linear-gradient(
@@ -817,7 +846,6 @@ td span {
   align-items: center;
   justify-content: center;
   padding: 12px 21px;
-
   font-weight: 600;
   font-size: 14px;
   line-height: 120%;
@@ -886,6 +914,7 @@ td span {
   flex-wrap: wrap;
   row-gap: 10px;
   column-gap: 30px;
+  justify-content: center;
 }
 .popular-schools__school {
   display: flex;
@@ -953,7 +982,7 @@ td span {
 .article__wrapper {
   padding: 52px 60px;
   max-width: 1362px;
-  max-height: 344px;
+  /* max-height: 344px; */
   border-radius: 20px;
   background: rgba(255, 255, 255, 1);
 
@@ -1106,7 +1135,7 @@ td span {
 .footer__wrapper {
   display: flex;
   max-width: 1362px;
-  max-height: 360px;
+  /* max-height: 360px; */
   padding-top: 54px;
   padding-right: 70px;
   padding-bottom: 69px;
@@ -1221,7 +1250,7 @@ td span {
   position: relative;
 }
 
-.privacy ul::after {
+/* .privacy ul::after {
   content: "";
   position: absolute;
   right: 0px;
@@ -1230,7 +1259,7 @@ td span {
   height: 13px;
   background-size: cover;
   background-image: url("/images/footer-DevMark.png");
-}
+} */
 
 .privacy__text {
   font-weight: 500;
@@ -1285,10 +1314,6 @@ td span {
 
 /* ---------------- Media Запросы --------------------*/
 
-.footer__container {
-  display: none;
-}
-
 .media-popup-menu {
   display: none;
 }
@@ -1317,6 +1342,18 @@ td span {
   display: none;
 }
 
+.mobile-media-main-section-not-implemented {
+  display: none;
+}
+
+.main__cards-items__list {
+  display: none;
+}
+
+.media-main-section-project-card-list {
+  display: none;
+}
+
 /* .media-burger-btn-wrapper {
   display: none;
 } */
@@ -1331,17 +1368,17 @@ td span {
 
 @media screen and (max-width: 1600px) {
   /*---------------Изменение уже существующих свойств -------------*/
-  main div > section {
+  /* main div > section {
     display: none;
-  }
+  } */
 
-  aside {
+  /* aside {
     display: none;
-  }
+  } */
 
-  article {
+  /* article {
     display: none;
-  }
+  } */
   /* 
   footer {
     display: none;
@@ -1350,6 +1387,14 @@ td span {
 
   .header__container {
     background-position-x: -300px;
+  }
+
+  .main__cards-items__item__third {
+    display: none;
+  }
+
+  .project-card__third {
+    display: none;
   }
 }
 
@@ -1362,7 +1407,7 @@ td span {
     display: none;
   }
 
-  .search-area {
+  .search-area-header {
     max-width: 743px;
     align-items: center;
     justify-content: space-between;
@@ -1376,11 +1421,12 @@ td span {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.5);
   }
-  .search-area__choice-city-button {
+
+  .media-search-area__choice-city-button {
     display: none;
   }
 
-  .search-field__input {
+  .media-search-field__input {
     flex-grow: 0;
   }
 
@@ -1392,12 +1438,21 @@ td span {
     column-gap: 0px;
   }
 
-  .search-area__search-field {
+  .media-search-area__search-field {
     width: 150px;
   }
 
   .main__maintain-statistic {
     column-gap: 60px;
+  }
+
+  .main__support-cities__wrapper {
+    width: 100%;
+    padding: 0 16px;
+  }
+
+  .footer__iphone-container {
+    display: none;
   }
   /*  */
   /*  */
@@ -1411,8 +1466,20 @@ td span {
   .main__amount {
   }
 
+  .article__school-add-container {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .main__maintain-statistic {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 16px;
+  }
+
   .media-main-section-maintain-statistic__main-projects {
-    display: none;
+    grid-column: 1 / span 2;
+    justify-self: center;
   }
 }
 
@@ -1439,7 +1506,7 @@ td span {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.5);
   }
-  .search-area__choice-city-button {
+  .media-search-area__choice-city-button {
     display: none;
   }
 
@@ -1455,7 +1522,7 @@ td span {
     column-gap: 0px;
   }
 
-  .search-area__search-field {
+  .media-search-area__search-field {
     width: 150px;
   }
 
@@ -1465,6 +1532,84 @@ td span {
 
   .title--big {
     font-size: 24px;
+  }
+
+  .main__cards-items__item__first {
+    display: none;
+  }
+  .main__cards-items__item__second {
+    display: none;
+  }
+
+  .main__cards-items::after,
+  .main__cards-items::before {
+    display: none;
+  }
+
+  .main__cards-items__container {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+  }
+
+  .main__cards-items__list {
+    padding: 0 10px;
+    height: 455px;
+    border: 1px solid #e8ecf3;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10px;
+  }
+
+  .cards-items__list__button {
+    -webkit-tap-highlight-color: transparent;
+  }
+  .one__header-info--active {
+    background-image: linear-gradient(to left, white, white);
+    border-radius: 10px;
+    border: 2px solid #96bdff;
+  }
+
+  .main__cards-items__item--active {
+    display: block;
+  }
+
+  .project-card__second {
+    display: none;
+  }
+
+  .project-card-wrapper::after,
+  .project-card-wrapper::before {
+    display: none;
+  }
+
+  .media-main-section-project-card-list {
+    display: block;
+  }
+  .media-main-section-project-card-list__container {
+  }
+
+  .media-main-section-project-card-list__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10px;
+    padding: 0 16px;
+    height: 352px;
+    border-radius: 10px;
+    border: 1px solid #e8ecf3;
+  }
+
+  .project-cards-school-button--active {
+    background: linear-gradient(86.21deg, #96bdff -0.21%, #3259ff 117.05%);
+    color: white;
+  }
+
+  .footer__wrapper {
+    flex-direction: column;
+    row-gap: 20px;
   }
 }
 
@@ -1500,6 +1645,18 @@ td span {
 
   .description {
     font-size: 14px;
+  }
+
+  .main__maintain-statistic {
+    display: none;
+  }
+
+  .main__cards {
+    margin: 0;
+  }
+
+  .main__support-cities__wrapper {
+    padding: 0 16px;
   }
   /* --------------- Настройка уже имеющихся свойств ---------------*/
 
@@ -1592,6 +1749,28 @@ td span {
     border-radius: 60px;
     background-color: rgb(255, 255, 255);
   }
+
+  /* .table__col--second {
+    flex-direction: column;
+    align-items: center;
+  } */
+
+  tr > td:nth-child(3) {
+    display: none;
+    visibility: hidden;
+  }
+
+  .form__name-input {
+    min-width: auto;
+  }
+
+  .form__city-input {
+    min-width: auto;
+  }
+
+  .form__address-input {
+    min-width: auto;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -1606,6 +1785,40 @@ td span {
   .header__footer-string {
     font-size: 14px;
   }
+
+  tr > td:nth-child(4) {
+    display: none;
+  }
+
+  .media-main-section-project-card-list {
+    display: none;
+  }
+  /* .project-card-wrapper::before,
+  .project-card-wrapper::after {
+    display: block;
+  } */
+
+  .main__cards-items__list {
+    display: none;
+  }
+
+  .table__caption {
+    font-size: 24px;
+  }
+
+  tr > td:nth-child(2),
+  tr > td:nth-child(5) {
+    display: none;
+  }
+
+  .col,
+  .col--transparent {
+  }
+
+  /* .main__cards-items::before,
+  .main__cards-items::after {
+    display: block;
+  } */
 }
 
 @media screen and (max-width: 450px) {
@@ -1618,14 +1831,41 @@ td span {
     display: none;
   }
 
+  .main-section-cards {
+    display: none;
+  }
+
+  .main__support-cities {
+    display: none;
+  }
+
+  .main-section-school-projects {
+    display: none;
+  }
+
+  aside {
+    display: none;
+  }
+
+  .article {
+    display: none;
+  }
+
+  .footer__container {
+    display: none;
+  }
+
   /* ------------------ Добавление новых свойств ----------------- */
 
   .mobile-header-container {
     display: block;
     width: 100%;
-    min-width: 394px;
+    /* min-width: 394px; */
     height: 100%;
+    border-bottom: 1px solid rgba(50, 88, 255, 1);
+    border-radius: 10px;
     background-color: transparent;
+    box-shadow: 0 1px 10px rgba(101, 148, 248, 0.411);
   }
   .mobile-header-wrapper {
     display: flex;
@@ -1643,7 +1883,8 @@ td span {
     transform: translateY(-50%);
     transition: all 0.3s;
     background-color: transparent;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(50, 88, 255, 0.705);
+
     -webkit-tap-highlight-color: transparent;
   }
 
@@ -1668,9 +1909,11 @@ td span {
   .media-main-mobile-cards-container {
     display: flex;
     justify-content: center;
+    margin: 16px 0;
+    padding-bottom: 50px;
     width: 100%;
-    min-width: 394px;
-    height: 185%;
+    /* min-width: 394px; */
+    /* height: 185%; */
   }
 
   .media-main-mobile-cards-wrapper {
@@ -1682,6 +1925,7 @@ td span {
 
   .media-main-mobail-cards-items {
     flex-direction: column;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
     row-gap: 16px;
@@ -1701,10 +1945,10 @@ td span {
   .media-footer-mobile-footer-container {
     display: block;
     position: fixed;
-
     bottom: 0;
     width: 100%;
-    min-width: 394px;
+    /* max-width: 394px; */
+    /* min-width: 394px; */
     background-color: white;
   }
   .media-footer-mobile-footer-wrapper {
@@ -1742,9 +1986,23 @@ td span {
     min-width: 394px;
   }
 
+  .mobile-media-main-section-not-implemented {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-variant: small-caps;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0 16px;
+    margin-top: 10px;
+    font-weight: 600;
+    font-size: 22px;
+  }
+
   .--disable {
     display: none;
   }
+
   .mobile-media-main-section-project-card-wrapper {
     margin: 0;
     flex-direction: column;
@@ -1775,6 +2033,14 @@ td span {
 
   .card-image {
     width: auto;
+  }
+
+  .info__frame {
+    width: 90px;
+  }
+
+  .card__button {
+    width: 90px;
   }
 }
 
